--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 
 .big-container{
-    width: 40%;
+    width: 1000px;
     margin: 0 auto;
      
    
@@ -32,7 +32,7 @@ header{
 
 .logo img{
     width:200px;
-   display: inline-block;
+    display: inline-block;
     position: absolute;
     left: 10px;
 
@@ -102,11 +102,6 @@ figure span, h1{
 
 }
 
-.box-title{
-   margin: 10px 25px; 
-    
-    
-}
 
 .title-table{
     font-size: 40px;
@@ -116,6 +111,19 @@ figure span, h1{
 .box-title{
     color: lightgrey;
     font-size: 20px;
+    margin: 10px 25px; 
+}
+
+/* fine contenitore 2 */
+
+
+
+
+/* inizio contenitore 3 */
+
+
+.content-box{
+    width: calc (100% / 3);
 }
 
 
@@ -124,55 +132,59 @@ figure span, h1{
 .card2{
    
     width: 500px;
-    height:500px ;
-    margin: 10px 5px;
+    height:500px;
+    
+    
+
   }  
 
     
-     
-   
-    
-    
-
-
-
-
 .card{
-    
-    width: 228px;
-    height: 500px;
-    margin: 10px 0px;
-    
-    
-    
-    
-    
+      
+      width: 228px;
+      height: 500px;
+      margin: 10px 0px;
 }
-
+      
+      
+      
+      
 .left{
     float: left;
 }
-
-
+      
+     
+   
+    
 .img1{
     width:225px;
     border-radius: 20px;
 }
 
 .img2{
-    width: 470px;
-    height: 225px;
+    width: 550px;
+    height: 300px;
     border-radius: 20px;
+    
+    
     
     
 }
 
 .img3{
-    width:225px;
+    width:300px;
     height: 225px;
     border-radius: 20px;
 
 }
+    
+
+
+/* fine contenitore 3 */
+
+
+
+
 
 .ending{
     
