--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ figure{
     width: 100%;
     height: 700px;
     border-radius: 10px;
+    filter: brightness(80%);
     
     
     
@@ -146,6 +147,7 @@ figure span, h1{
       height: 500px;
       margin-top: 15px;
       
+      
 }
       
       
@@ -156,18 +158,36 @@ figure span, h1{
 }
       
      
-   
+
     
 .img1{
     width:225px;
+    height: 230px;
     border-radius: 20px;
-    margin-top: 50px;
+    margin-top: 40px;
+    filter: brightness(80%);
+    
+    
+    
 }
 
+
+
 .img2{
-    width: 500px;
-    height: 280px;
+    width: 480px;
+    height: 230px;
+    margin-left: 20px;   
     border-radius: 20px;
+    filter: brightness(80%);
+    margin-top: 55px;
+    background-image: url(../img/banner-2.jpg);
+    background-size: cover;
+    
+    
+    
+    
+    
+    
     
     
     
@@ -176,9 +196,12 @@ figure span, h1{
 
 .img3{
     width:300px;
-    height: 225px;
+    height: 230px;
     border-radius: 20px;
     margin-top: 40px;
+    filter: brightness(80%);
+    
+    
     
 }
     
